--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "^16.3.0-alpha.1",
+    "react": "16.3.0-alpha.1",
     "react-native": "0.54.0",
-    "react-native-modal": "^5.2.0"
+    "react-native-modal": "^5.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1"
+    "react-test-renderer": "16.3.0-alpha.1"
   },
   "jest": {
     "preset": "react-native"
